# bai_tap_lon_oop

./: .gitignore  CMakeLists.txt  README.md
data/: giangvien.csv  sinhvien.csv
data/backup/: giangvien.csv  sinhvien.csv  thietbi.csv
include/: Application.h  BangDiem.h  Camera.h  CsvFile.h  Cua.h  DieuHoa.h  GiangVien.h  MayChieu.h  SinhVien.h  ThietBi.h  pch.h
src/: Application.cpp  BangDiem.cpp  Camera.cpp  Cua.cpp  DieuHoa.cpp  GiangVien.cpp  MayChieu.cpp  SinhVien.cpp  ThietBi.cpp  main.cpp
